--- a/index.html
+++ b/index.html
@@ -5,75 +5,49 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
-    <title>Prework Study Guide</title>
+    <link rel="stylesheet" href="./dist/style.css">
+    <title>Team Profile Generator</title>
   </head>
   <body>
     <header id="top">
-      <h1>Prework Study Guide</h1>
-      <img src="./assets/bowtie-cat.png" alt="Profile image of cat wearing a bow tie." />
+      <h1>My Team</h1>
     </header>
     <main>
-        const addManager = function (manager) {
-            return `
-            <div class="card" style="width: 18rem;">
-          <img src="..." class="card-img-top" alt="...">
+            <div class="card" id = "manager" style="width: 18rem;">
           <div class="card-body">
-            <h5 class="card-title">${manager.getRole()}</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            <h5 class="card-title">${manager.getName()}</h5>
+            <h6 class="card-text">${manager.getRole()}</h6>
           </div>
           <ul class="list-group list-group-flush">
-            <li class="list-group-item">${manager.getName()}</li>
-            <li class="list-group-item">${manager.getId}</li>
-            <li class="list-group-item">${manager.getEmail}</li>
-            <li class="list-group-item">${manager.getOfficeNumber()}</li>
+            <li class="list-group-item">ID: ${manager.getId}</li>
+            <li class="list-group-item"> Email: ${manager.getEmail}</li>
+            <li class="list-group-item">Office Number: ${manager.getOfficeNumber()}</li>
           </ul>
-          <div class="card-body">
-            <a href="#" class="card-link">Card link</a>
-            <a href="#" class="card-link">Another link</a>
-          </div>
-        </div> `
-        };
+        </div> 
         
-        const addEngineer = function (engineer) {
-            return `
-            <div class="card" style="width: 18rem;">
-          <img src="..." class="card-img-top" alt="...">
+            <div class="card" id = "engineer"style="width: 18rem;">
           <div class="card-body">
-            <h5 class="card-title">${engineer.getRole()}</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            <h5 class="card-title">{engineer.getName()}</h5>
+            <h6 class="card-text">${engineer.getRole()}</h6>
           </div>
           <ul class="list-group list-group-flush">
-          <li class="list-group-item">${engineer.getName()}</li>
-          <li class="list-group-item">${engineer.getId()}</li>
-          <li class="list-group-item">${engineer.getEmail()}</li>
-          <li class="list-group-item">${engineer.getGithub()}</li>
+          <li class="list-group-item"> ID: ${engineer.getId()}</li>
+          <li class="list-group-item">$Email: {engineer.getEmail()}</li>
+          <li class="list-group-item">Github: ${engineer.getGithub()}</li>
           </ul>
+        </div>
+
+            <div class="card" id = "intern" style="width: 18rem;">
           <div class="card-body">
-            <a href="#" class="card-link">Card link</a>
-            <a href="#" class="card-link">Another link</a>
-          </div>
-        </div> `
-        };
-        
-        const addIntern = function (intern) {
-            return `
-            <div class="card" style="width: 18rem;">
-          <img src="..." class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">${intern.getRole()}</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            <h5 class="card-title">Name: ${intern.getName()}</h5>
+            <h6>${intern.getRole()}</h6>
           </div>
           <ul class="list-group list-group-flush">
-          <li class="list-group-item">Email: ${intern.getName()}</li>
-          <li class="list-group-item">${intern.getId()}</li>
-          <li class="list-group-item">${intern.getEmail()}</li>
-          <li class="list-group-item">${intern.getShcool()}</li>
+          <li class="list-group-item">ID: ${intern.getId()}</li>
+          <li class="list-group-item">Email: ${intern.getEmail()}</li>
+          <li class="list-group-item">School: ${intern.getShcool()}</li>
           </ul>
-          <div class="card-body">
-            <a href="#" class="card-link">Card link</a>
-            <a href="#" class="card-link">Another link</a>
-          </div>
-        </div> `
+        </div> 
     </main>
 
     <footer>
